# openFL-2.0

./: .gitattributes  .gitignore  README openFL.md  README.md  compile_contracts.py  foundry.toml  pyproject.toml
.env/: .env.ganache
.github/workflows/: Dev - Python Build, Lint & Test.yml  Main - Python Build, Lint & Test.yml  Python Build, Lint & Test.yml
api/: cifar10_ganache_experiment.ipynb  mnist_experiment.py  mnist_ropsten_experiment.ipynb  private_keys.txt  pytorch_model.py  requirements.txt  rpc_endpoint.txt  smartcontracts.py
config/: config.yaml
contracts/: OpenFLManager.sol  OpenFLModel.sol
experiment/: experiment_configuration.py  experiment_runner.py  experiments.py
notebooks/: cifar10_ganache_experiment.ipynb  mnist_ropsten_experiment.ipynb
scripts/: compile_contracts.py
src/openfl/api/: __init__.py  connection_helper.py
src/openfl/contracts/: __init__.py  fl_challenge.py  fl_manager.py
src/openfl/ml/: pytorch_model.py
src/openfl/utils/: __init__.py  config.py  printer.py  require_env.py
tests/: test_placeholder.py
tests/solidity/: feedback_array.t.sol
